--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -100,7 +100,7 @@
                                 <div class="ant-timeline-item-content">
                                     <span class="badge badge-primary">2019-08-10 </span>
                                     <div class="d-flex align-items-center post-title">
-                                        <a class="post-link h5 text-primary" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/2019/08/10/%E8%8B%A6%E7%93%9C.html">苦瓜</a>
+                                        <a class="post-link h5 text-primary" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/2019/08/10/%E8%8B%A6%E7%93%9C.html">Bitter Gourd</a>
                                      </div>
                                 </div>
                             </li>
@@ -167,7 +167,7 @@
                                 <div class="ant-timeline-item-content">
                                     <span class="badge badge-primary">2019-07-19 </span>
                                     <div class="d-flex align-items-center post-title">
-                                        <a class="post-link h5 text-primary" href="/%E6%8A%80%E6%9C%AF%E6%97%A5%E5%BF%97/2019/07/19/%E6%9C%AA%E5%86%B3%E7%9A%84%E9%9A%BE%E9%A2%98.html">未决的难题（一）</a>
+                                        <a class="post-link h5 text-primary" href="/%E6%8A%80%E6%9C%AF%E6%97%A5%E5%BF%97/2019/07/19/%E6%9C%AA%E5%86%B3%E7%9A%84%E9%9A%BE%E9%A2%98.html">ansible版本与华为feature package的兼容性问题</a>
                                      </div>
                                 </div>
                             </li>
