--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -191,7 +191,7 @@
                                 <div class="ant-timeline-item-content">
                                     <span class="badge badge-primary">2019-06-14 </span>
                                     <div class="d-flex align-items-center post-title">
-                                        <a class="post-link h5 text-primary" href="/%E6%8A%80%E6%9C%AF%E6%97%A5%E5%BF%97/2019/06/14/%E8%BF%98%E6%98%AF%E5%86%99%E4%B8%AAshell%E6%9D%A5%E5%AE%9E%E7%8E%B0%E5%90%A7.html">用shell配合ansible-playbook实现简单命令的自动化配置</a>
+                                        <a class="post-link h5 text-primary" href="/%E6%8A%80%E6%9C%AF%E6%97%A5%E5%BF%97/2019/06/14/%E8%BF%98%E6%98%AF%E5%86%99%E4%B8%AAshell%E6%9D%A5%E5%AE%9E%E7%8E%B0%E5%90%A7.html">用shell配合playbook实现简单命令的自动化配置</a>
                                      </div>
                                 </div>
                             </li>
