--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -52,6 +52,14 @@
                         <div class="page-header" id="archives">
                             <h4><strong>生活随笔</strong></h4>
                         </div>
+                      <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-danger">2019-12-31 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                     <a class="post-link text-danger h5 text-danger" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/2019/12/31/The-year-of-2019.html">Time To Waste，Life To Spend</a>
+                                    </div>
+                                </div>
+                            </li>
                         
                            <li class="ant-timeline-item">
                                 <div class="ant-timeline-item-content">
