--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
           <tr><td>Framework:</td><td>Jekyll</td></tr>
           <tr><td>Background From:</td><td><a href="http://hubblesite.org"> hubblesite.org</a></td></tr>  
         </table>
-         <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}</p>
+         <p class="text-muted">Copyright &copy; {{ site.copyright }} 2020</p>
         </div>
 
         <div class="col-md-6">
