--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column font-weight-bold jumbotron justify-content-center animated fadeIn p-0" id="jumbotron">
+<div class="d-flex flex-column font-weight-bold jumbotron justify-content-center animated fadeIn p-0" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">
   <div id="blurBox" class="p-4 text-center">
     <p class="text-white animated delay-2s fadeInDown m-0">Jekyll theme by <a href="http://szhshp.org">Szhshp</a></p>
     <p class="animated display-4 delay-2s fadeInDown text-white">Project Gaia</p>
