--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column font-weight-bold jumbotron justify-content-center animated fadeIn p-0" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">
-  <div id="blurBox" class="p-4">
+  <div id="blurBox" class="p-4 text-center" tabindex="1">
     <p class="animated display-4 delay-2s fadeInDown text-white">New's Singular Point </p>
     <p class="animated delay-2s fadeInDown font-weight-normal pt-2 text-white m-0">
       V1.5  New Year Special</p>  
