--- a/css/head.css
+++ b/css/head.css
@@ -1,18 +1,17 @@
-#jumbotron{
-    padding-top: 25vh;
-    background-size: 100% 100%;
-    font-size: 1.2rem
-}
 
 
-@media(min-width:800px){
-    #jumbotron{
-    	height: 100vh;
-    }
+#jumbotron {
+  background: url($headBackground) no-repeat center center scroll;
+  background-size: 100% 100%;
+  @media (min-width: 800px) {
+    height: 110vh;
+  }
+  @media (max-width: 800px) {
+    height: 100%;
+  }
+  div#blurBox {
+    background-color: rgba(0, 0, 0, 0.6);
+  }
 }
-@media(max-width:800px){
-    #jumbotron{
-    	height: 100%;
-    }
-}
+
 
