--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -13,7 +13,7 @@
     <div id="wrapper" >
 
        {% include navbar.html %}
-       {% include about-messager.html %}
+       {% include head1.html %}
        {% include comment-full.html %}
        {% include footer.html %}
 
