--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,6 +6,9 @@
     <title>{{site.title}}</title>
 
     {% include global-css.html %}
+
+    <link href="{{site.url}}{{site.baseurl}}/css/head.css" rel='stylesheet' type="text/css"/>
+    <link href="{{site.url}}{{site.baseurl}}/css/archives.css" rel='stylesheet' type="text/css"/>
     <link href="{{site.url}}{{site.baseurl}}/img/111.ico" rel="SHORTCUT ICON" />
 </head>
 <body>
@@ -13,15 +16,16 @@
     <div id="wrapper" >
 
        {% include navbar.html %}
-       {% include head1.html %}
-       {% include comment-full.html %}
+       {% include head.html %}
        {% include footer.html %}
 
     </div>
 
     {% include global-js.html %}
 
-   <script src="{{site.url}}{{site.baseurl}}/js/sidebar.js" type="text/javascript"></script>
+    <script src="{{site.url}}{{site.baseurl}}/js/sidebar.js"></script>
+    <script src="{{site.url}}{{site.baseurl}}/js/content-pagination.js"></script>
+
 </body>
 </html>
-
+© 2020 GitHub, Inc.
