--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -16,7 +16,7 @@
     <div id="wrapper" >
 
        {% include navbar.html %}
-       {% include head.html %}
+       {% include head1.html %}
        {% include archives.html %}
        {% include footer.html %}
 
