--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -16,7 +16,8 @@
     <div id="wrapper" >
 
        {% include navbar.html %}
-       {% include head.html %}
+       {% include head1.html %}
+        {% include comment-full.html %}
        {% include footer.html %}
 
     </div>
