--- a/_includes/head1.html
+++ b/_includes/head1.html
@@ -1,10 +1,10 @@
 <div class="d-flex flex-column text-white jumbotron justify-content-center" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg5.jpg) no-repeat scroll;background-size: cover;">     
 	
 	<p class="display-4 animated" style="color:red">你好，欢迎</p>  
-	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp"> 这是我的个人博客。</p>
-        <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">它在2020年1月8日由V1.0升级至V1.5，也就是你现在看到的样子。</p>
-        <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">升级后可能漂亮了一些，但它依然是<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">陋室</a>。</p>
+	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">这是我的个人博客，创建于2019年6月8日。</p>
+        <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">它在2020年1月8日由V1.0升级至V1.5，也就是现在的样子。</p>
+        <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">升级后可能漂亮了一些，但不可否认它依然是<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">陋室</a>。</p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">它容量有限，有限到只够装下一个人的感受。</p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">它依然需要翻墙才能打开评论席，如果有需要的话。</a>
-	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">好像已经有人给出了墙内加载comment-bar的方案，不过我暂时不想搞了，好累。</p>
+	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">尽管已经有人给出了墙内加载comment-bar的方案，不过站主暂时不想搞了，他累了。</p>
 </div>
