--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
 <div class="d-flex flex-column text-white jumbotron justify-content-center" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">     
 	
-	<p class="display-4 animated" align="center"> New's Singular Point </p>  
+	<p class="display-4 animated" align="center">Mr.New's Singular Point </p>  
         <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">V1.5</p>
-	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">The Special Edition For New Year</p>
+	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">Special Edition For New Year</p>
 
         
 </div>
