--- a/_includes/head1.html
+++ b/_includes/head1.html
@@ -6,5 +6,6 @@
         <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">升级后可能漂亮了一些，但不可否认它依然是<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">陋室</a>。</p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">它容量有限，有限到只够装下一个人的生活琐碎和感受。</p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">它依然需要翻墙才能打开评论席，如果有需要的话。</a>
-	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">尽管已经有人给出了墙内加载comment-bar的方案，不过站主暂时不想搞了，他累了。</p>
+	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">尽管已经有人给出了墙内加载comment-bar的方案，不过主人暂时不想搞了。</p>
+        <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">他累了，需要好好睡一觉。</p>
 </div>
