--- a/_includes/head1.html
+++ b/_includes/head1.html
@@ -7,6 +7,6 @@
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">它容量有限，有限到只够装下一个人的生活琐碎和感受。</p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">它依然需要翻墙才能打开评论席，如果有需要的话。</a>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">尽管已经有人给出了墙内加载comment-bar的方案，不过站主暂时不想搞了。</p>
-        <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">……</p>
+        <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">   </p>
         <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">他累了，需要好好睡一觉。</p>
 </div>
