--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,9 @@
 	
 	<p class="display-4 animated" align="center">Mr.New's Singular Point </p>  
         <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">V1.5</p>
+	<p class="lead m-0">
+      <a class="btn-sm btn-light animated delay-2s fadeInUp" href="https://themeiwu.com/about.html" role="button">What's New?</a>
+    </p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">Special Edition For New Year</p>
 
         
