--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -157,6 +157,14 @@
                                      </div>
                                 </div>
                             </li>
+                      <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-primary">2020-01-09 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                        <a class="post-link h5 text-primary" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/2020/01/09/%E6%89%93%E5%9B%9E%E5%8E%9F%E5%BD%A2.html">怪人志异</a>
+                                     </div>
+                                </div>
+                            </li>
                       
                         <div class="page-header" id="archives">
                             <h4><strong>技术日志</strong></h4>
