--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -267,6 +267,15 @@
                                      </div>
                                 </div>
                             </li>
+                      
+                       <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-primary">2020-01-09 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                        <a class="post-link h5 text-primary" href="/%E6%8A%80%E6%9C%AF%E6%97%A5%E5%BF%97/2020/01/09/%E5%85%B3%E4%BA%8Epython%E7%9A%84%E5%B0%8F%E9%97%AE%E9%A2%981.html">python中"if __name__ == '__main__':"的作用</a>
+                                     </div>
+                                </div>
+                            </li>
             </div>
         </div>
         <!-- /#page-content-wrapper -->
