--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -173,6 +173,14 @@
                                      </div>
                                 </div>
                             </li>
+                      <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-primary">2020-01-14 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                        <a class="post-link h5 text-primary" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/2020/01/14/%E6%B4%BB%E7%9D%80%E6%B4%BB%E7%9D%80%E5%B0%B1%E8%80%81%E4%BA%86.html">活着活着就老了</a>
+                                     </div>
+                                </div>
+                            </li>
                             
                         <div class="page-header" id="archives">
                             <h4><strong>技术日志</strong></h4>
