--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -292,6 +292,14 @@
                                      </div>
                                 </div>
                             </li>
+                      <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-primary">2020-01-16 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                        <a class="post-link h5 text-primary" href="/%E6%8A%80%E6%9C%AF%E6%97%A5%E5%BF%97/2020/01/16/%E5%85%B3%E4%BA%8Epython-self-init%E5%87%BD%E6%95%B0.html">关于python的class中函数init()和参数self的理解</a>
+                                     </div>
+                                </div>
+                            </li>
             </div>
         </div>
         <!-- /#page-content-wrapper -->
