--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -189,6 +189,23 @@
                                      </div>
                                 </div>
                             </li>
+                      <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-primary">2020-03-01 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                        <a class="post-link h5 text-primary" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/2020/03/01/%E7%A5%9D%E6%88%91%E7%94%9F%E6%97%A5%E5%BF%AB%E4%B9%90.html">廿九岁，谈谈人生，聊聊理想。</a>
+                                     </div>
+                                </div>
+                            </li>
+                      
+                            <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-primary">2020-02-24 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                        <a class="post-link h5 text-primary" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/2020/02/24/change-my-job.html">当我跑步时，我在跑些什么。</a>
+                                     </div>
+                                </div>
+                            </li>
                             
                         <div class="page-header" id="archives">
                             <h4><strong>技术日志</strong></h4>
