--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -205,6 +205,14 @@
                                         <a class="post-link h5 text-primary" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/2020/02/24/change-my-job.html">当我跑步时，我在跑些什么。</a>
                                      </div>
                                 </div>
+                           </li>                   
+                     <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-primary">2020-03-02 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                        <a class="post-link h5 text-primary" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/2020/03/02/%E6%97%A5%E8%AE%B0%E5%80%BE%E5%90%91.html">琐事二三</a>
+                                     </div>
+                                </div>
                             </li>
                             
                         <div class="page-header" id="archives">
