--- a/_includes/head1.html
+++ b/_includes/head1.html
@@ -2,7 +2,7 @@
 	
 	<p class="display-4 animated" style="color:red">你好，欢迎。</p>  
 	<p class="display-4 animated" style="color:red">  </p>  
-	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">这是我的个人博客，斯是<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">陋室</a>，创建于2019年6月8日。</p>
+	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">这是我的个人博客，斯是<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">陋室</a>，创建于2019年6月8日</p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">   </p>
         <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">它在2020年1月8日由V1.0升级至V1.5，也就是现在的样子</p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">   </p>
