--- a/_includes/head1.html
+++ b/_includes/head1.html
@@ -10,7 +10,9 @@
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">   </p>
         <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">它在2020年1月8日由V1.0升级至V1.5，也就是现在的样子</p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">   </p>
-	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">它容量有限，只够装下一个人的生活琐碎和感受</p>
+	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">它不会对外公开且容量有限</p>
+	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">   </p>
+	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">有限到只够装下一个人的生活琐碎和感受</p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">   </p>
 	
 </div>
