--- a/_includes/head1.html
+++ b/_includes/head1.html
@@ -8,7 +8,7 @@
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">   </p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">它被创建于2019年6月8日</p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">   </p>
-        <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">它在2020年1月8日由V1.0升级至V1.5，也就是现在的样子</p>
+        <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">它在2020年1月8日由V1.0升级至V1.5</p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">   </p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">它不会对外公开且容量有限</p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">   </p>
