--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,8 @@
 <div class="d-flex flex-column text-white jumbotron justify-content-center" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">     
 	
 	<p class="display-4 animated" align="left">Mr.New's Singular Point </p> 
+	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp"> </p>
+	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">我不再看远方，只把目标放在前面3米远处。天空和风、草地、观众、喝彩声、现实、过去——所有这些都被我排除在外。</p>
 
         
 </div>
