--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,6 @@
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp"> </p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">我不再看远方，只把目标放在前面3米远处。天空和风、草地、观众、喝彩声、现实、过去—所有这些都被我排除在外</p>
         <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp"> </p>
-	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">-From《人生马拉松》</p> 
+	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">—《人生马拉松》</p> 
         
 </div>
