--- a/_includes/head1.html
+++ b/_includes/head1.html
@@ -1,8 +1,8 @@
 <div class="d-flex flex-column text-white jumbotron justify-content-center" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg5.jpg) no-repeat scroll;background-size: cover;">     
 	
-	<p class="display-4 animated" style="color:red" align="center">你好，欢迎。</p>  
+	<p class="display-4 animated" style="color:red" style="padding:9px 12px 5px">你好，欢迎。</p>  
 	<p class="display-4 animated" style="color:red">  </p>  
-	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">这是我的个人博客，斯是<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">陋室</a></p>
+	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">这是我的个人博客，斯是<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">陋室</a></p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">   </p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">它托管于Github，基于Jekyll公有框架</p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp" align="center">   </p>
