--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
           <tr><td>Vi Director:</td><td>Bootstrap4</td></tr>   
           <tr><td>Co-Vi Director:</td><td>Stylish Portfolio</td></tr>
           <tr><td>Framework:</td><td>Jekyll</td></tr>
-          <tr><td>Background From:</td><td>Ubuntu's WallPaper</td></tr>  
+          <tr><td>BG From:</td><td>Ubuntu's WallPaper</td></tr>  
         </table>
          <p class="text-muted">Copyright &copy; {{ site.copyright }} 2020</p>
         </div>
