--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -213,6 +213,15 @@
                                         <a class="post-link h5 text-primary" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/2020/03/02/%E6%97%A5%E8%AE%B0%E5%80%BE%E5%90%91.html">琐事二三</a>
                                      </div>
                                 </div>
+                      </li>
+                      
+                      <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-primary">2020-03-05 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                        <a class="post-link h5 text-primary" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/2020/03/05/%E4%B8%A4%E4%B8%AA%E7%A6%BB%E8%81%8C%E4%BF%A1.html">两个离职信</a>
+                                     </div>
+                                </div>
                             </li>
                             
                         <div class="page-header" id="archives">
