--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,7 +52,7 @@
    <script src="{{site.url}}{{site.baseurl}}/js/post.js" type="text/javascript"></script>
    <script src="{{site.url}}{{site.baseurl}}/js/toc.js" type="text/javascript"></script>
    <script src="{{site.url}}{{site.baseurl}}/js/lightbox.min.js" type="text/javascript"></script>
-   <script src="{{site.url}}{{site.baseurl}}/js/bgm.js" type="text/javascript"></script>
+    <!-- <script src="{{site.url}}{{site.baseurl}}/js/bgm.js" type="text/javascript"></script> -->
 
 </body>
 </html>
