--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp">我不再看远方，只把目标放在前面3米远处。天空和风、草地、观众、喝彩声、现实、过去—所有这些都被我排除在外。</p>
         <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp"> </p>
 <p class="lead">
-		<a class="btn btn-secondary" href="http://themeiwu.com/%E4%BA%BA%E7%94%9F%E9%A9%AC%E6%8B%89%E6%9D%BE.html" role="button">Read All ?</a>   
+		<a class="btn btn-secondary" href="http://themeiwu.com/%E4%BA%BA%E7%94%9F%E9%A9%AC%E6%8B%89%E6%9D%BE.html" role="button">What's new ?</a>   
 	</p>
         
 </div>
