--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column text-white jumbotron justify-content-center" id="jumbotron" style="background: url({{site.url}}{{site.baseurl}}/img/bg.jpg) no-repeat scroll;background-size: cover;">     
 	
-	<p class="display-4 animated" align="left">Singular Point </p> 
+	<p class="display-4 animated" align="left">我与我周旋久，宁做我 </p> 
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp"> </p>
 	<p id="sentence_of_the_day" class="text-white h5 animated fadeInUp"></p>
         <p id="sentence_of_the_day" class="text-white h5 animated fadeInUp"> </p>
